making the nav fixed and the overflow attribute

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: visible;
+    
 
 
 }
@@ -12,6 +12,7 @@
 
 body{
     background:linear-gradient(to top,rgb(247, 129, 74),rgb(164, 164, 248));
+    overflow-x: hidden;
 }
 html {
     scroll-behavior: smooth;
@@ -101,6 +102,7 @@ nav #burger:hover{
     display: flex;
     flex-wrap: wrap;
     position: absolute;
+    position: fixed;
     left: 0;
     top: 47px;
     z-index: 1;
